#load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
cc_binary(
    name = "demo_welcome",
    srcs = ["src/mytest.cpp"],
    deps=["@OptFrame//include:OptFCore"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++17"],
        "@bazel_tools//src/conditions:darwin": ["--std=c++17"],
        "//conditions:default": ["--std=c++17"],
    }),
)
