#load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_KPfcore",
    srcs = ["mainKP-fcore-ex.cpp", "KP-fcore-ex.hpp"],
    data = ['knapsack-example.txt'],
    deps = ["@optframe//include:OptFCore"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++17"],
        "@bazel_tools//src/conditions:darwin": ["--std=c++17"],
        "//conditions:default": ["--std=c++17"],
    }),
)
