###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "optframe", dev_dependency = True)
git_override(
    module_name = "optframe",
    remote = "https://github.com/optframe/optframe.git",
    branch='master'
    # commit = "87ce7ebcfb495b9535729d4a31ea1a50b6a6b95a"
)
