bazel_dep(name = "optframe", dev_dependency = True)
#git_override(
#    module_name = "optframe",
#    remote = "https://github.com/optframe/optframe.git",
#    branch='master'
#    # commit = "5321f7ce0d110a5bd59dbe3294e9de9f6012ba6a"
#)
local_path_override(
    module_name = "optframe",
    path = "../../",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_license", version = "1.0.0")

