load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_TSPfcore-ils",
    srcs = ["mainTSP-fcore-ils.cpp", "TSP-fcore.hpp"],
    copts = ['-std=c++17', '-fconcepts', '-Wfatal-errors'],
    deps = ["@OptFrame//src:OptFCore"]
)

cc_binary(
    name = "app_TSPfcore-brkga",
    srcs = ["mainTSP-fcore-brkga.cpp", "TSP-fcore.hpp"],
    copts = ['-std=c++17', '-fconcepts', '-Wfatal-errors'],
    deps = ["@OptFrame//src:OptFCore"]
)