load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_TSPfcore-ils",
    srcs = ["mainTSP-fcore-ils.cpp", "TSP-fcore.hpp"],
    deps = ["@OptFrame//include:OptFCore"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++17"],
        "@bazel_tools//src/conditions:darwin": ["--std=c++17"],
        "//conditions:default": ["--std=c++17", "-Wfatal-errors"],
    }),
)

cc_binary(
    name = "app_TSPfcore-brkga",
    srcs = ["mainTSP-fcore-brkga.cpp", "TSP-fcore.hpp"],
    deps = ["@OptFrame//include:OptFCore"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++17"],
        "@bazel_tools//src/conditions:darwin": ["--std=c++17"],
        "//conditions:default": ["--std=c++17", "-Wfatal-errors"],
    }),
)