#load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "core-examples-hpp",
    hdrs = glob([
        "**/*.hpp",
    ]),
    include_prefix = "OptFrame-Core-Examples/",
    deps = ["//include/OptFCore:all_hpp", "//include:OptFrame"],
)